--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,7 @@ author:
   - 'Tokuhiro Matsuno <tokuhirom AAJKLFJEF GMAIL COM>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
-  Test::More: 0.96
+  Test::More: 0.98
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
@@ -20,9 +20,12 @@ no_index:
     - t
     - xt
 requires:
-  Amon2: 2.33
+  Amon2: 3.01
+  Encode::JP::Mobile: 0
   HTTP::MobileAgent: 0
+  HTTP::MobileAgent::Plugin::Charset: 0
+  Lingua::JA::Regular::Unicode: 0
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.03
